MMT-3017: Fixed the MMT preview page miss alignment when using zoomed in/out

--- a/app/assets/stylesheets/overrides/_metadatapreview.scss
+++ b/app/assets/stylesheets/overrides/_metadatapreview.scss
@@ -1,7 +1,7 @@
 #metadata-preview{
   max-width: 1725px;
-  padding-right: 280px;
-  padding-left: 30px;
+  padding-right: 190px;
+  padding-left: 20px;
   position: relative;
 }
 
